# routes/api.php
@@ -41,6 +41,8 @@ Route::group(['namespace' => 'Api\V1', 'prefix' => 'v1', 'as' => 'api.v1.'], fun
         Route::post('/restaurants', 'RestaurantController@index')->name('restaurant.index');
         // restaurant featured list{api/v1/restaurants/featured}
         Route::post('/restaurants/featured', 'RestaurantController@featured')->name('restaurant.featured');
+        // restaurant item type list{api/v1/restaurants/featured}
+        Route::post('/restaurants/item-type', 'RestaurantController@itemtype')->name('restaurant.itemtype');
         // vanue item list{api/v1/restaurants/items}
         Route::post('/restaurants/items', 'RestaurantItemController@index')->name('restaurant.items.index');
     });
